style fix related to checkboxes on small resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ body {
 
 .checkbox+label::before {
     content: '';
-    width: 24px;
+    min-width: 24px;
     height: 24px;
     background-image: url('../img/icons/checkbox_disabled.svg');
     background-position: center;
